# cxx-lox

./: .clang-format  .codespellrc  .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  HACKING.md  README.md  test.lox  vcpkg.json
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  docs.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  variables.cmake
include/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
src/lib/: chunk.c  compiler.c  debug.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
test/: CMakeLists.txt
test/src/: clox_test.cpp
